// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation actions should create an action to navigate back 1`] = `
Object {
  "type": "NAVIGATE_BACK",
}
`;

exports[`navigation actions should create an action to navigate to a screen 1`] = `
Object {
  "payload": Object {
    "newSection": false,
    "scene": "scene",
  },
  "type": "NAVIGATE_NAVIGATE",
}
`;

exports[`navigation actions should create an action to navigate to a screen 2`] = `
Object {
  "payload": Object {
    "newSection": true,
    "scene": "scene",
  },
  "type": "NAVIGATE_NAVIGATE",
}
`;

exports[`navigation actions should create an action to update the drawer state 1`] = `
Object {
  "payload": Object {
    "drawerOpen": "state",
  },
  "type": "NAVIGATE_OPENDRAWER",
}
`;
